fixed blurry image

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -15,7 +15,7 @@ html {
 
 }
 body {
-    background: #fff;
+    background-color: var(--app-dark-bg);
 }
 
 .header-wrapper {
@@ -166,6 +166,7 @@ nav ul li + li {
     width: 40%;
     line-height: 60px;
     font-size: 50px;
+    color: #fff;
 }
 
 p {
@@ -173,6 +174,7 @@ p {
     font-weight: 400;
     width: 80%;
     padding-top: 6px;
+    color: #fff;
 }
 
 .fa-minus{
@@ -210,7 +212,7 @@ img {
 /* ---------------------------------------------------- */
 
 .contact-wrapper {
-    background-color: #fff;
+    background-color: #ebeef3;
     padding: 60px 0;
 }
 
@@ -234,12 +236,14 @@ img {
     box-shadow: 1px 1px 1px 1px rgb(0 0 0 / 0.1);
     text-align: center;
     padding: 20px 20px 10px 20px;
+    background-color: var(--app-dark-bg);
 }
 
 h2{
     text-align: left;
     line-height: 50px;
     font-size: 32px;
+    color: #fff;
 }
 
 h3 {
@@ -289,7 +293,7 @@ h3:hover{
 /* ---------------------------------------------------- */
 
 footer {
-    background-color: #ebeef3;
+    background-color: var(--app-dark-bg);
     display: flex;
     justify-content: center;
     padding: 50px 0
@@ -300,7 +304,7 @@ footer {
 }
 
 .footer-nav a {
-    color: #000;
+    color: rgb(255, 255, 255);
 }
 
 .social-media{
@@ -317,6 +321,7 @@ footer {
 }
 
 h4{
+    color: #fff;
     font-size: 14px;
     font-weight: 400;
     letter-spacing: 1px;
